# 36120-25SP-AT1-12-25238736

./: Makefile  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml  requirements.txt
36120-25SP-AT1-12-25238736/: __init__.py  dataset.py  features.py  plots.py
36120-25SP-AT1-12-25238736/modeling/: predict.py  train.py
src/36120-25SP-AT1-12-25238736/models/: null.py
tests/: test_data.py
tests/data/: test_sets.py
tests/features/: test_dates.py
tests/models/: test_null.py  test_performance.py
