[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "36120-25SP-AT1-12-25238736"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Nayna" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["36120-25SP-AT1-12-25238736"]
include = ["pyproject.toml", "36120-25SP-AT1-12-25238736/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["36120-25SP-AT1-12-25238736"]
force-sort-within-sections = true

